# eint

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
benches/: eint.rs
c/: eint.c
examples/: arith.rs
fuzz/: Cargo.toml  Makefile
fuzz/fuzz_targets/: arith_e256.rs  arith_e64.rs  arith_u256.rs  compare2.rs  divrem.rs  mul.rs  utils.rs
src/: c_impl.rs  lib.c  lib.rs
tests/: best_numbers.rs  bugs.rs  proptest.proptest-regressions  proptest.rs
