[package]
name = "eint"
version = "1.1.0"
authors = ["mohanson@outlook.com"]
edition = "2021"
description = "Fixed-size signed/unsigned big integers."
license = "MIT"
repository = "https://github.com/mohanson/eint"
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4"
proptest = "1.1"

[[bench]]
name = "eint"
harness = false
